--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -1,8 +1,13 @@
 # Deeper dive: Sampling and ANOVA
 
-## Previously: Equal Population Means
+## Now: Different Population Means
 
-In the last chapter, we examined the scenario where there was distribution of sample means where the sample means differed due to random sampling only. In this chapter, examine the scenario with multiple populations where the population means are different. We specifically focus on the variance of the distribution of sample means because that is theoretical foundation for Analysis of Variance (ANOVA). We begin, however, in the simple situation of a single population.
+In the last chapter, we examined a scenario with multiple populations where the **population means were identical**. Consequently, sample means differed due to random sampling only. This mean the formula for total variance and the formula for random sampling variance were estimates of the same quantity.
+
+**In this chapter**, we examine a scenario with multiple populations where the **population means are different**.  Consequently, the same means will differ for two reasons....
+
+
+We specifically focus on the variance of the distribution of sample means because that is theoretical foundation for Analysis of Variance (ANOVA). We begin, however, in the simple situation of a single population.
 
 
 ## Theory sample mean variance 
