--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -2,19 +2,15 @@
 
 ## Now: Different Population Means
 
-In the last chapter, we examined a scenario with multiple populations where the **population means were identical**. Consequently, sample means differed due to random sampling only. This mean the formula for total variance and the formula for random sampling variance were estimates of the same quantity.
+In the last chapter, we examined a scenario with multiple populations where the **population means were identical**. Consequently, sample means differed for one reason: random sampling error. This meant the formulas for a) total variance and b) random sampling variance were estimates of the **same** quantity.
 
-**In this chapter**, we examine a scenario with multiple populations where the **population means are different**.  Consequently, the same means will differ for two reasons....
-
-
-We specifically focus on the variance of the distribution of sample means because that is theoretical foundation for Analysis of Variance (ANOVA). We begin, however, in the simple situation of a single population.
-
+**In this chapter**, we examine a scenario with multiple populations where the **population means are different**.  Consequently, sample means will differ for two reasons. More specifically, sample means will differ due to differences among the population mean and random sampling error.  This means the formulas for a) total variance and b) random sampling variance are estimates of **different** quantities.
 
 ## Theory sample mean variance 
 
 ### Single population (theory)
 
-Recall that when there is a single population we express the variance in sample means using the formula below. This formula is conceptual one that calculates the variance in sample means due to sampling error for a given population variance and sample size.
+Although the focus of this chapter is multiple populations, we begin with a single population. Recall that when there is a single population we express the variance in sample means using the formula below. This formula is conceptual one that calculates the variance in sample means due to sampling error for a given population variance and sample size.
 
 $$
 \begin{aligned} 
