--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -64,6 +64,18 @@ $$
 
 Importantly, if the populations all have the same mean then  $\sigma_{\mu_A}^2=0$. When this happens, sample means differ only due to sampling error. 
 
+
+  Goal| Formula | Expected value | degrees of feedom |
+:--------------:|:--------------:|:------------------:|:---------------:|
+Estimated total variance | $\frac{\sum(\bar{x_i}-\bar{\bar{x}})^2}{a-1}$ |$\frac{\sigma_{people}^2}{n} + \sigma_{A}^2$ | $a-1$
+Estimated variance sampling error | $\frac{s_{people}^2}{n}$ |$\frac{\sigma_{people}^2}{n}$ | $n-1$
+
+The table above summarizes the different estimate goals of the two formulas. Consider the "Expected value" (or Expected Mean Square) column. When the populations means are the same then $\sigma_{A}^2  = 0$. When the population means are different, then $\sigma_{A}^2>0$. 
+
+Note that when the population mean are the same, and $\sigma_{A}^2$ becomes $0$, the "Expected value" is becomes the same for both formulas. That is, they are both estimates of the same quantity, namely, $\frac{\sigma_{people}^2}{n}$. We examined that situation in the last chapter.
+
+In this chapter, we examine the situation where $\sigma_{A}^2>0$. That is, that situation where the two formulas are estimates of different quantities.
+
 ## Practice sample mean variance 
 
 
