--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -72,9 +72,9 @@ Estimated variance sampling error | $\frac{s_{people}^2}{n}$ |$\frac{\sigma_{peo
 
 The table above summarizes the different estimate goals of the two formulas. Consider the "Expected value" (or Expected Mean Square) column. When the populations means are the same then $\sigma_{A}^2  = 0$. When the population means are different, then $\sigma_{A}^2>0$. 
 
-Note that when the population mean are the same, and $\sigma_{A}^2$ becomes $0$, the "Expected value" is becomes the same for both formulas. That is, they are both estimates of the same quantity, namely, $\frac{\sigma_{people}^2}{n}$. We examined that situation in the last chapter.
+Note that when the population mean are the same, and $\sigma_{A}^2$ becomes $0$, the "Expected value" is becomes the same for both formulas. That is, they are both estimates of the same quantity, namely, $\frac{\sigma_{people}^2}{n}$. We examined that scenario in the last chapter.
 
-In this chapter, we examine the situation where $\sigma_{A}^2>0$. That is, that situation where the two formulas are estimates of different quantities.
+In this chapter, our final goal is to examine the multiple population scenario where $\sigma_{A}^2>0$. That is, that situation where the two formulas are estimates of different quantities. But we begin with a review of the single population scenario.
 
 ## Practice sample mean variance 
 
