--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -131,7 +131,7 @@ We take the variance of all of those sample means and get a value of 30.80005 wh
 
 ### Multiples population, equal $\mu$ (practice)
 
-Now let's see what happens when we have three populations with different means - as illustrated in the table and figure below. Notice the mean for all three populations is 172.50 in the table below.
+Now let's see what happens when we have three populations with different means - as illustrated in the table and figure below. Notice the mean for all three populations is 172.50 in the table below. This means, $\sigma_{A}^2 = 0$. 
 
 
 | Population |  Mean        | Variance        |
@@ -182,6 +182,8 @@ $$
 &=  0\\
 \end{aligned}
 $$
+
+Thus, as indicated above: $\sigma_{A}^2 = 0$. 
 
 So the total variance is sample means is:
 
@@ -240,7 +242,7 @@ $$
 
 ### Multiples population, different $\mu$ (practice)
 
-Now let's see what happens when we have three populations with different means - as illustrated in the table and figure below.
+Now let's see what happens when we have three populations with different means - as illustrated in the table and figure below. The different populations means indicate that $\sigma_{A}^2>0$.
 
 | Population |  Mean        | Variance        |
 |:----------:|:------------:|:----------------|
@@ -278,6 +280,7 @@ $$
 \end{aligned}
 $$
 
+
 We use this value to calculate the variance of the population means. Which we find to be 0 because the population means are all the same.
 
 $$
@@ -291,6 +294,8 @@ $$
 &=  266.6667\\
 \end{aligned}
 $$
+
+Thus, as indicated above, $\sigma_{A}^2>0$.
 
 So the total variance is sample means is:
 
