--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -566,14 +566,16 @@ ggplot(data = data_ratios3, mapping = aes(x = var_ratio)) +
 
 Because the red line is so extreme, our $p-value$ is very low $p<.0001$. **This is the probability of our data (or more extreme data), assuming the population means are all the same.**
 
-Consequently, we say the ANOVA is significant. That is, we begin by assuming the population means are all the same, our find our study result is incredibly unlikely. Consequently, we reject the assumption, that the population means are all the same.
+Consequently, we say the ANOVA is significant. We began by assuming the population means were all the same. Under this assumption, our study result is incredibly unlikely. Consequently, we reject the assumption, that the population means are all the same, and conclude the population means may be different.
 
+## Take a moment
 
+Take a moment and think about all of the math and logic we've used to come to this point. In particular, take note of the fact that we are making conclusions at the population-level not the sample-level.
 
 ##  Summary
 
 |          Attribute           |                                  Parameter Calculation                                   |                               Estimate of Parameter                               | Reflects         |
 |:----------------------------:|:----------------------------------------------------------------------------------------:|:---------------------------------------------------------------------------------:|:----------------:|
-|      Method 1: Variance      |  $\sigma_{\bar{x}}^2 = \frac{\sum_{i=1}^{K=\infty}{(\bar{x}_i - \mu_{\bar{x}})^2}}{K}$   |    $s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}$    | Sampling Error & Variance of Population Means |
+|      Method 1: Total Variance      |  $\sigma_{\bar{x}}^2 = \frac{\sum_{i=1}^{K=\infty}{(\bar{x}_i - \mu_{\bar{x}})^2}}{K}$   |    $s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}$    | Sampling Error & Variance of Population Means |
 |    Method 2 CLT: Variance    |                    $\sigma_{\bar{x}}^2 = \frac{\sigma_{people}^2}{n}$                    |                     $s_{\bar{x}}^2 = \frac{s_{people}^2}{n}$                      | Just Sampling Error |
 
