--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -578,9 +578,9 @@ Comparison using $F$-ratio | $\frac{\frac{\sum (\bar{x_i}-\bar{\bar{x}})^2}{a-1}
 
   Juggling| Formula | Expected value | degrees of feedom |
 :--------------:|:--------------:|:------------------:|:---------------:|
-Sample size multiplied by estimated total variance| $\frac{nb\sum(\bar{x_i}-\bar{\bar{x}})^2}{a-1}$ |$\sigma_{people}^2 + nb \sigma_{A}^2$ | $(a-1) = 1$
-Estimated population variance | $s_{people}^2 =MSE= 60.0$ |$\sigma_{people}^2$ | $ab(n-1) = 24$
-Comparison using $F$-ratio | $\frac{\frac{nb\sum(\bar{x_i}-\bar{\bar{x}})^2}{a-1}}{s_{people}^2}$ | $\frac{\sigma_{people}^2 + nb \sigma_{A}^2}{\sigma_{people}^2}$ | $(a-1) = 1$      | $[(a-1),ab(n-1)]=[1,24]$
+Sample size multiplied by estimated total variance| $\frac{nb\sum(\bar{x_i}-\bar{\bar{x}})^2}{a-1}$ |$\sigma_{people}^2 + nb \sigma_{A}^2$ | $(a-1)$
+Estimated population variance | $s_{people}^2$ |$\sigma_{people}^2$ | $ab(n-1)$
+Comparison using $F$-ratio | $\frac{\frac{nb\sum(\bar{x_i}-\bar{\bar{x}})^2}{a-1}}{s_{people}^2}$ | $\frac{\sigma_{people}^2 + nb \sigma_{A}^2}{\sigma_{people}^2}$ | $[(a-1),ab(n-1)]$
 
 ### Means $B$: Preparation 
 
@@ -590,22 +590,29 @@ Comparison using $F$-ratio | $\frac{\frac{nb\sum(\bar{x_i}-\bar{\bar{x}})^2}{a-1
 
 Preparation| Formula | Expected value | degrees of feedom |
 :--------------:|:--------------:|:------------------:|:---------------:|
-Estimated total variance | $\frac{\sum(\bar{x_i}-\bar{\bar{x}})^2}{b-1}$ |$\frac{\sigma_{people}^2}{na} + \sigma_{B}^2$ | $(b-1) = 2$
-Estimated variance sampling error | $\frac{s_{people}^2}{na} = ?$ |$\frac{\sigma_{people}^2}{na}$ | $ab(n-1) = 24$
-Comparison using $F$-ratio | $\frac{\frac{\sum (\bar{x_i}-\bar{\bar{x}})^2}{b-1}}{                  \frac{s_{people}^2}{na}}$ |  $\frac{\frac{\sigma_{people}^2}{na} + \sigma_{B}^2}{    \frac{\sigma_{people}^2}{na}}$ | $[(b-1),ab(n-1)]=[2,24]$
+Estimated total variance | $\frac{\sum(\bar{x_i}-\bar{\bar{x}})^2}{b-1}$ |$\frac{\sigma_{people}^2}{na} + \sigma_{B}^2$ | $(b-1)$
+Estimated variance sampling error | $\frac{s_{people}^2}{na}$ |$\frac{\sigma_{people}^2}{na}$ | $ab(n-1)$
+Comparison using $F$-ratio | $\frac{\frac{\sum (\bar{x_i}-\bar{\bar{x}})^2}{b-1}}{                  \frac{s_{people}^2}{na}}$ |  $\frac{\frac{\sigma_{people}^2}{na} + \sigma_{B}^2}{    \frac{\sigma_{people}^2}{na}}$ | $[(b-1),ab(n-1)$
 
 #### $B$ typical (preparation)
 
   Juggling| Formula | Expected value | degrees of feedom |
 :--------------:|:--------------:|:------------------:|:---------------:|
-Sample size multiplied by estimated total variance| $\frac{nb\sum(\bar{x_i}-\bar{\bar{x}})^2}{b-1}$ |$\sigma_{people}^2 + na \sigma_{B}^2$ | $(b-1) = 2$
-Estimated population variance | $s_{people}^2 =MSE= 60.0$ |$\sigma_{people}^2$ | $ab(n-1) = 24$
-Comparison using $F$-ratio | $\frac{\frac{na\sum(\bar{x_i}-\bar{\bar{x}})^2}{b-1}}{s_{people}^2}$ | $\frac{\sigma_{people}^2 + na \sigma_{B}^2}{\sigma_{people}^2}$ | $(b-2) = 1$      | $[(b-1),ab(n-1)]=[2,24]$
+Sample size multiplied by estimated total variance| $\frac{na\sum(\bar{x_i}-\bar{\bar{x}})^2}{b-1}$ |$\sigma_{people}^2 + na \sigma_{B}^2$ | $(b-1)$
+Estimated population variance | $s_{people}^2$ |$\sigma_{people}^2$ | $ab(n-1)$
+Comparison using $F$-ratio | $\frac{\frac{na\sum(\bar{x_i}-\bar{\bar{x}})^2}{b-1}}{s_{people}^2}$ | $\frac{\sigma_{people}^2 + na \sigma_{B}^2}{\sigma_{people}^2}$ | $[(b-1),ab(n-1)]$
 
 ## Interaction variance
 
+When we say two variable **interact** to predict the dependent variable we are saying there is more going on that the two main effects.
+So when we seek to determine if there is an interaction we work with **residualized** cell means. That is, cell means were the main effects have been removed. In the next section we illustrate how those residualized cell means are calculated.
+
+
 ### Obtaining residualized means
+
 #### Subtract $A$ marginal means
+
+The cell means are illustrated below. Recall the overall marginal mean for yes_juggling is `r round(mean_a1,2)` and the overall marginal mean for no_juggling is `r round(mean_a2,2)`. Be begin by removing these main effect means for $A$ from the marginal means. 
 
  Effect  | low_prep  | medium_prep| high_prep| 
 :-------:|:---------:|:----------:|:-----:|
@@ -615,6 +622,8 @@ no_juggle| $`r xbar4` - `r mean_a2` = `r round(ra4,2)`$ | $`r xbar5` - `r mean_a
 
 #### Subtract $B$ marginal means
 
+Next, we take the residualized. means from the previous step and remove the main effect of $B$. Recall the marginal means for low, medium, and high preparation were `r round(mean_a2,2)`, `r round(mean_b2,2)`, and `r round(mean_b3,2)`, respectively. We subtract these main effect means from the residualized. means from the previous step.
+
  Effect  | low_prep  | medium_prep| high_prep| 
 :-------:|---------|----------|-----|
 yes_juggle | $`r round(ra1,2)` - `r round(mean_b1,2)` = `r round(rb1,2)`$ | $`r round(ra2,2)` - `r round(mean_b2,2)` = `r round(rb2,2)`$ |  $`r round(ra3,2)` - `r round(mean_b3,2)` = `r round(rb3,2)`$|
@@ -623,6 +632,9 @@ no_juggle | $`r round(ra4,2)` - `r round(mean_b1,2)` = `r round(rb4,2)`$ | $`r r
 
 #### Add grand mean
 
+In the previous steps, we removed the main effect means for $A$ and then we removed the main effect means for $B$. In effect, though each time we did this we removed the "grand mean" twice. We only want to remove the grand mean once though - because this makes so later calculations easier. So now we add the grand mean back in:
+
+
  Effect  | low_prep  | medium_prep| high_prep| 
 :-------:|--------|----------|-----|
 yes_juggle | $`r round(rb1,2)` + `r round(mean_grand,2)` = `r round(rg1,2)`$ | $`r round(rb2,2)` + `r round(mean_grand,2)` = `r round(rg2,2)`$ | $`r round(rb3,2)` + `r round(mean_grand,2)` = `r round(rg3,2)`$ |
@@ -630,15 +642,36 @@ no_juggle | $`r round(rb4,2)` + `r round(mean_grand,2)` = `r round(rg4,2)`$ | $`
 
 #### Final residualized means
 
+The final residualized cell means we use for the interaction calculation are below:
+
  Effect  | low_prep  | medium_prep| high_prep| 
 :-------:|---------|---------|----|
 yes_juggle | $`r round(rg1,2)`$ | $`r round(rg2,2)`$ | $`r round(rg3,2)`$ |
 no_juggle | $`r round(rg4,2)`$ |  $`r round(rg5,2)`$ | $`r round(rg6,2)`$ |
 
 
+#### Degrees of freedom for total variance
+
+Recall how we calculated the total number of cells. There were two levels of juggling so $a = 2$. There were three levels of preparation so $b = 3$.
+
+$\text{Total number of cells} = ab = (2)(3) = 6$
+
+We use the same logic when determining the degrees of freedom for the interaction. The degrees of freedom for jugglings is $a-1$ where as the degrees of freedom for preparation are $b-1$. We use the same general approach to the total degrees of freedom:
+
+$\text{Degrees of freedom for total variance} = (a-1)(b-1)=(2-1)(3-1)=(1)(2)=2$
+
+#### Total variance
+
+We use this degrees of freedom in the total variance formula:
+
+
 $$
 s_{residual}^2 = \frac{\sum (\overline{x_{residual_i}} - \overline{\overline{x_{residual}}})^2}{(a-1)(b-1)}
 $$
+
+
+We apply the formula above the means in the residualized mean table. These are the cell means with the main effects removed. 
+The estimated population variance is:
 
 \begin{align}
 s_{residual}^2 &= \frac{\sum (\overline{x_{residual_i}} - \overline{\overline{x_{residual}}})^2}{(a-1)(b-1)}\\
@@ -649,7 +682,15 @@ s_{residual}^2 &= \frac{\sum (\overline{x_{residual_i}} - \overline{\overline{x_
 &= 53.92667
 \end{align}
 
-Now F-value:
+
+Each residualized mean is based on $n=5$. Therefore, the estimated variance due to sampling error is:
+
+$$
+\frac{s_{people}^2}{n}
+$$
+
+
+So F-ratio comparing these two estimates is:
 
 \begin{align}
 F &= \frac{\text{estimated total variance}}{\text{estimated variance due to random sampling}} \\
@@ -657,6 +698,14 @@ F &= \frac{\text{estimated total variance}}{\text{estimated variance due to rand
 &= \frac{53.92667}{\frac{60}{5}}\\
 &=  4.49\\
 \end{align}
+
+
+
+
+
+
+
+
 
 
 #### $AB$ conceptual (interaction)
